--- a/webduplex-demo3/index.html
+++ b/webduplex-demo3/index.html
@@ -1249,6 +1249,14 @@
     <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
 
     <script>
+      // Copyright 2019 Akash Patel (@patelakash317)
+
+      // Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+      // The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+      
+      // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+      
       // additional function
         function showCredits(){
           // console.log(document.getElementsByClassName('showing'))
@@ -1319,7 +1327,7 @@
             setTimeout(function(){
               window.speechSynthesis.cancel();
               $('.btnca').focus();
-              var text = "सबसे पहले , आपको दिवाली की खूब खूब बधाईया , मेरा यह प्रोग्राम उपयोग करने के लिए आपका धन्यवाद .";
+              var text = "सबसे पहले , आपको दिवाली की खूब खूब बधाईया , मेरा यह प्रोग्राम उपयोग करने के लिए आपका धन्यवाद ,. अब आप ऊपर से दायी और , दिए गए एक्शन बटन का ,  उपयोग करे. अब  उनमे दिए उदाहरणों का इस्तेमाल करने के लिए , निचे से दाई और , एक माइक वाला बटन दिया गया हैं , जिससे आप उदाहरणों वाले प्रश्न मुझे पूछ सकते हैं. तो चलिए सुरु करते हैं.";
               speak(text, true);
               $('.btngreeintg').remove();
             }, 500);
