--- a/webduplex-demo2/index.html
+++ b/webduplex-demo2/index.html
@@ -334,6 +334,13 @@
         }, 5000);
       }
 
+      setTimeout(function(){test();}, 100);
+      function test(){ // preload get voices to save time for mobile
+        var voices_preload = window.speechSynthesis.getVoices(); // find your prefered language from this list
+        // $.each(voices, function(index, value){
+        //   $('#logsas').html($('#logsas').html()+'  -  '+value.name+'<br/>');
+        // });
+      }
       let speaking = false;
       function speak(text){
         // var text = $('#message').val();
@@ -348,9 +355,12 @@
         // voices = window.speechSynthesis.getVoices(); // find your prefered language from this list
         // alert(voices);
         let final_voices = getLanguage(voices, 'Google US English');
+        // let final_voices = getLanguage(voices, 'Google US English');
         if(final_voices == 'not'){
-          console.log('No supporting language found.');
-          alert(text);
+          // $('.product_div').html('We are sorry on behalf of your browser.<br/>Unfortunately, your browser does not support this language.<br/>But still you can try this on your Desktop.');
+          alert('We are sorry on behalf of your browser. Unfortunately, your browser does not support this language. But still you can try this on your Desktop.');
+          // alert('No supporting language found.');
+          // alert(text);
         } else {
           speaking = true;
           // mentioned language supporting 
