--- a/autobootready/index.html
+++ b/autobootready/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Autobootready</title>
+		<title>Autobootready.js</title>
 		<link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/autobootready/css/autobootready.css" rel="stylesheet">
+    <!-- <link href="./assets/autobootready/css/autobootready.css" rel="stylesheet"> -->
     <style type="text/css">
       .boxport{
         width: 35%;
@@ -14,6 +14,73 @@
         width: 100%;
         float: left;
       }
+      body{
+        padding: 15px;
+        display: flow-root;
+      }
+
+      /*success modal*/
+        #blksuccess-wrapper{
+          background: rgba(34, 62, 34, 0.25);
+          position: fixed;
+          visibility: hidden;
+          left: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100%;
+          width: 100%;
+          top: 0;
+          transition: all 0.55s ease-in-out;
+        }
+        #blksuccess .elinks{
+          font-size: 20px;
+          padding-bottom: 10px;
+          padding-top: 10px;
+          transition: all 0.55s ease-in-out;
+        }
+        #blksuccess .elinks a{
+          color: blue;
+        }
+        #blksuccess{
+          width: 550px;
+          text-align: center;
+          background: #eee;
+          font-size: 35px;
+          margin: 0 auto;
+          padding: 15px;
+          padding-top: 20px;
+          border: 3px solid green;
+          transition: all 0.55s ease-in-out;
+        }
+      /*success modal ends*/
+
+      /*apply action*/
+        .global_action{
+          position: fixed;
+          bottom: 0;
+          margin-bottom: 10px;
+          text-align: center;
+          width: 100%;
+          transition: all 0.55s ease-in-out;
+        }
+        .global_action_new{
+          background: rgba(34, 62, 34, 0.25);
+          position: fixed;
+          left: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100%;
+          width: 100%;
+          top: 0;
+          transition: all 0.55s ease-in-out;
+        }
+        .global_action #btnapply, .global_action_new #btnapply{
+          font-size: 25px;
+          padding: 0px 15px 5px 20px;
+        }
+      /*apply action ends*/
     </style>
 
     <!-- credit -->
@@ -38,6 +105,11 @@
           position: fixed; 
           top: 100px;
           /*bottom: 0;*/
+
+          /*right: 4%;*/
+          width: 500px;
+          /*right: 0;*/
+          transition: all 0.55s ease-in-out;
         }
         .action_credits{
           background: #ddd;
@@ -48,8 +120,15 @@
           height: 100%;
           padding: 10px;
 
+          border-left: 3px solid #000;
           right: -500px;
           transition: all 0.55s ease-in-out;
+        }
+        .action_credits .footer{
+          text-align: center;
+          position: absolute;
+          bottom: 0;
+          padding: 12px;
         }
         .action_credits.showing{
           right: 0px;
@@ -109,7 +188,7 @@
           <input type="checkbox" id="txttue" name="txttue" value="tue"><label for="txttue">Tuesday</label>
         </div>
         <div>
-          <label for="txthobs">Hobs<sup>*</sup></label>
+          <label for="txthobs">Hobbies<sup>*</sup></label>
           <input type="text" id="txthobs" name="txthobs">
         </div>
         <div>
@@ -131,19 +210,35 @@
       </div>
     </form>
 
+    <div class="global_action">
+      <button type="button" id="btnapply">Click here to apply Autobootready.js</button>
+    </div>
     <div class="action_credits">
-      <button class="btnca btn btn-primary" onclick="showCredits()">Actions</button>
+      <button class="btnca btn btn-primary" id="btnaction_credits" onclick="showCredits()">Source</button>
       <div class="sendleft center">
         <div class="credits">
-          <div class="center" id="headline"><a href="https://github.com/patelakash317/autobootready.js">Autobootready.js <br/>Automatic bootstrap ready plugin</a> demonstration</div>Akash Patel [@patelakash317]
+          <div class="center" id="headline"><a href="https://github.com/patelakash317/autobootready.js"><h4 class="m-0">Autobootready.js</h4><!--  <br/> -->Automatic bootstrap ready plugin</a> demonstration</div>
+        </div>
+        <div class="footer">
+          Automated web styling script to upgrade or quick start from simple HTML elements to Bootstrap based elements<br/><br/><a href="https://www.linkedin.com/in/patelakash317">Akash Patel</a> [<a href="https://twitter.com/patelakash317">@patelakash317</a>]<br/>
         </div>
       </div>
     </div>
 
-		<script type="text/javascript" src="./assets/js/jquery-3.4.1.slim.min.js"></script>
+    <div id="blksuccess-wrapper">
+      <div id="blksuccess">
+        <img src="./assets/img/success-4.gif" height="130"><br/>Autbootready.js
+        <h4 class="text-success">Successfully applied</h4>
+        <div class="elinks">
+          <a href="javascript:void(0);" onclick="window.location.reload();return false;">Refresh</a> | <a href="https://github.com/patelakash317/autobootready.js">Source Code</a> | <a href="javascript:void(0);" onclick="successIsYetToCome();">Close</a>
+        </div>
+      </div>
+    </div>
+
+		<script type="text/javascript" src="./assets/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="./assets/js/popper.min.js"></script>
     <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./assets/autobootready/js/autobootready.min.js"></script>
+    <!-- <script type="text/javascript" src="./assets/autobootready/js/autobootready.min.js"></script> -->
 
     <script>
       // additional function
@@ -156,6 +251,7 @@
             $('.btnca').html('Actions');
             $('.btnca').removeClass('btn-danger');
             $('.btnca').addClass('btn-primary');
+
           } else {
             // console.log('un-hiding');
             $('.action_credits').addClass("showing");
@@ -163,9 +259,103 @@
             $('.btnca').html('&nbsp; Hide&nbsp;');
             $('.btnca').addClass('btn-danger');
             $('.btnca').removeClass('btn-primary');
+            tody();
           }
         }
-      // additional function ensd
+        function tody(){
+          setTimeout(function(){
+            $('.credits').css('top', '0');
+
+            setTimeout(function(){
+              $('.credits').css('top', (Math.floor(Math.random() * 300))+'px');
+              tody();
+            }, 500);
+          }, 2000);
+        }
+      // additional function ends
+
+      $('#btnapply').on('click', function(){
+        // adding js
+        var my_awesome_script = document.createElement('script');
+        my_awesome_script.setAttribute('src','./assets/autobootready/js/autobootready.min.js');
+        document.body.appendChild(my_awesome_script);
+
+        // adding css
+         var head  = document.getElementsByTagName('head')[0];
+          var link  = document.createElement('link');
+          link.id   = 'cssId';
+          link.rel  = 'stylesheet';
+          link.type = 'text/css';
+          link.href = './assets/autobootready/css/autobootready.css';
+          link.media = 'all';
+          head.appendChild(link);
+
+        $('.global_action').remove();
+        $('.global_action_new').remove();
+        setTimeout(function(){
+          applyText();
+        }, 50);
+      });
+
+      async function applyText(){
+        applyCSS('label');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 1000)); // wait 1 seconds
+        applyCSS('input[type="text"]');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 1000)); // wait 1 seconds
+        applyCSS('input[type="radio"]');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 1000)); // wait 1 seconds
+        applyCSS('input[type="checkbox"]');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 1000)); // wait 1 seconds
+        applyCSS('select');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 1000)); // wait 1 seconds
+        applyCSS('textarea');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 1000)); // wait 1 seconds
+        applyCSS('button');
+
+        await new Promise((resolve, reject) => setTimeout(resolve, 3000)); // wait 1 seconds
+        showApplied();
+      }
+
+      function applyCSS(element_name){
+        $(''+element_name).each(function(){
+          let its_id = $(this).attr('id');
+          if(its_id){
+            if(its_id != 'btnaction_credits'){
+              $(this).addClass('applycss');
+            }
+          } else {
+            $(this).addClass('applycss');
+          }
+
+          if(element_name == 'textarea'){
+            var block_new = $('html');
+            var height_new = block_new[0].scrollHeight;
+            $("html").animate({ scrollTop: height_new}, 350);
+          }
+
+          // console.log(element_name);
+        });
+      }
+
+      function showApplied(){
+        $( "#blksuccess-wrapper" ).css( "visibility", 'visible' );
+        $( "#blksuccess-wrapper" ).fadeIn( "slow", 'swing' );
+      }
+      function successIsYetToCome(){
+        $( "#blksuccess-wrapper" ).fadeOut( "slow", 'swing' );
+        $( "#blksuccess-wrapper" ).css( "visibility", 'hidden' );
+      }
+
+      setTimeout(function(){
+        $('.global_action').addClass('global_action_new');
+        $('.global_action_new').removeClass('global_action');
+      }, 3000);
     </script>
 	</body>
 </html>
