--- a/index.html
+++ b/index.html
@@ -55,12 +55,34 @@
         </div>
       </footer>
     </div>
+    <script type="text/javascript" src="./autobootready/assets/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript">
       function updateFlag(element){
         let link_1 = document.getElementById('linklink').classList.remove("featured");
         let links_2 = document.getElementById('bloglink').classList.remove("featured");
         let links_3 = document.getElementById('dotlink').classList.remove("featured");
         element.classList.add("featured");
+      }
+
+      tody();
+      function tody(){
+        setTimeout(function(){
+          $('#avatarImageBlock').css('border-radius', '150px');
+
+          setTimeout(function(){
+            let final_min_radius = minRad();
+            console.log('New radius: '+final_min_radius);
+            while(final_min_radius <= 80){
+              final_min_radius = minRad();
+            }
+            console.log('Final radius: '+final_min_radius);
+            $('#avatarImageBlock').css('border-radius', final_min_radius+'px');
+            tody();
+          }, 4000);
+        }, 1000);
+      }
+      function minRad(){
+        return Math.floor(Math.random() * 150);
       }
     </script>
   </body>
