Profile fix and autobootready.js activate time load error fix

--- a/autobootready/index.html
+++ b/autobootready/index.html
@@ -299,7 +299,7 @@
                 applyText();
               }, 0);
             }
-            css.onerror = function() {
+            link.onerror = function() {
               alert("System is unable to load the stylesheet.");
             }
         }
