the word corrector fix

--- a/autobootready/index.html
+++ b/autobootready/index.html
@@ -227,7 +227,7 @@
 
     <div id="blksuccess-wrapper">
       <div id="blksuccess">
-        <img src="./assets/img/success-4.gif" height="130"><br/>Autbootready.js
+        <img src="./assets/img/success-4.gif" height="130"><br/>Autobootready.js
         <h4 class="text-success">Successfully applied</h4>
         <div class="elinks">
           <a href="javascript:void(0);" onclick="window.location.reload();return false;">Refresh</a> | <a href="https://github.com/patelakash317/autobootready.js">Source Code</a> | <a href="javascript:void(0);" onclick="successIsYetToCome();">Close</a>
