--- a/index.html
+++ b/index.html
@@ -134,5 +134,15 @@
         });
       // eye monitoring ends
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166126782-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-166126782-1');
+    </script>
+
   </body>
 </html>
