--- a/localToDo/index.html
+++ b/localToDo/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Local Todo - Single page local todo application (Non backend)</title>
+		<meta charset="utf-8">
+		<title>Local Todo - Free Offline Todo App | Demo</title>
+		<meta name="description" content="Single page local free todo application (Non backend) Demo">
 		<link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- todo style -->
