SEO test update

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>Akash Patel</title>
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Akash Patel personal website">
+    <meta name="keywords" content="Akash Patel, Akash, Patel, patelakash317, Patel Akash, Latest">
+    <meta name="author" content="Akash Patel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <meta property="og:title" content="Akash Patel" />
+    <meta property="og:url" content="https://patelakash317.github.io/" />
+    <meta property="og:description" content="Akash Patel personal website" />
+    <meta property="og:image" content="images/avatar.jpg" />
+    <meta property="og:type" content="profile" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Akash Patel" />
+    <meta name="twitter:url" content="https://patelakash317.github.io/" />
+    <meta name="twitter:description" content="Akash Patel personal website" />
+    <meta name="twitter:image" content="images/avatar.jpg" />
   </head>
   <body>
     <div id="mainContainer">
