--- a/invisible-human/index.html
+++ b/invisible-human/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Disappearing People Project</title>
+	<meta charset="utf-8">
+	<title>Invisible Human Project | Demo</title>
+  <meta name="description" content="Disappearing People Project">
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
