--- a/webduplex-demo3/index.html
+++ b/webduplex-demo3/index.html
@@ -5,6 +5,7 @@
     <!-- http://localhost/webspeechdemo/webspeechdemo.html -->
     <meta charset="utf-8">
     <title>WebDuplex plugin | Multi Lingual | Demo 3</title>
+    <meta name="description" content="Web Voice Action using Speech Plugin, Alternative to Google duplex for web">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/webduplex/css/webduplex.min.css" rel="stylesheet">
     <style>
