--- a/webduplex/index.html
+++ b/webduplex/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- sample origin: https://github.com/googlearchive/webplatform-samples -->
-    <!-- http://localhost/webspeechdemo/webspeechdemo.html -->
     <meta charset="utf-8">
-    <title>WebDuplex plugin</title>
+    <title>WebDuplex plugin | Demo</title>
+    <meta name="description" content="Web Voice Action using Speech Plugin, Alternative to Google duplex for web">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/webduplex/css/webduplex.min.css" rel="stylesheet">
+    <!-- sample origin: https://github.com/googlearchive/webplatform-samples -->
+    <!-- http://localhost/webspeechdemo/webspeechdemo.html -->
     <style>
       * {
         font-family: Verdana, Arial, sans-serif;
