--- a/wish/index.html
+++ b/wish/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Fatakda</title>
+    <title>!! દિવાળીની શુભેચ્છા !!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -314,9 +314,9 @@
 
         if(name == undefined || name == '' || name == ' '){
           $('.dfsname').html("મારા");
-          $('.footerbtn').attr('href', 'whatsapp://send?text=મેં તમારા માટે કંઈક મોકલ્યું છે વાદળી લીટીને ટચ કરો https://patelakash.github.io/wish/?n= જુઓ');
+          $('.footerbtn').attr('href', 'whatsapp://send?text=મેં તમારા માટે કંઈક મોકલ્યું છે વાદળી લીટીને ટચ કરો https://patelakash317.github.io/wish/?n= જુઓ');
         } else {
-          $('.footerbtn').attr('href', 'whatsapp://send?text='+name+' તમારા માટે  માટે કંઈક મોકલ્યું છે વાદળી લીટીને ટચ કરો https://patelakash.github.io/wish/?n='+name+' જુઓ');
+          $('.footerbtn').attr('href', 'whatsapp://send?text='+name+' તમારા માટે  માટે કંઈક મોકલ્યું છે વાદળી લીટીને ટચ કરો https://patelakash317.github.io/wish/?n='+encodeURI(name)+' જુઓ');
           $('.dfsname').html(name);
         }
       }
