--- a/wish/index.html
+++ b/wish/index.html
@@ -130,6 +130,71 @@
         position: fixed;
         padding: 16px;
       }
+
+      /*form input*/
+        .enter-name input[type=name]:focus, .enter-name input[type=name]:active {
+          background-color: yellow;
+        }
+        .enter-name input[type=name] {
+          background-color: #e4e40d;
+          color: black;
+          font-weight: bold;
+          border-radius: 10px;
+          box-sizing: border-box;
+          border: 2px solid black;
+          padding: 5px;
+          position: fixed;
+          left: 10px;
+          bottom: 5px;
+          height: 50px;
+          width: 70%;
+          text-align: center;
+          font-size: 22px;
+          display: inline-block;
+        }
+        .animated {
+          -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+          -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+        }
+        .pulse {
+          -webkit-animation-name: pulse;
+          animation-name: pulse;
+        }
+        .animated.infinite {
+          -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+        }
+
+        /*button*/
+        .enter-name .btn:focus, .enter-name .btn:active {
+          background-color: red;
+        }
+        .enter-name .btn {
+          border-radius: 10px;
+          font-size: 21px;
+          padding: 4px;
+          position: fixed;
+          right: 2px;
+          bottom: 5px;
+          height: 50px;
+          width: 23%;
+          display: inline-block;
+          color: white;
+          font-weight: 600;
+          background-color: #d00b0b;
+          border: 2px solid black;
+          letter-spacing: .5px;
+          transition: .2s ease-out;
+          cursor: pointer;
+          line-height: 36px;
+          outline: 0;
+          text-transform: uppercase;
+          vertical-align: middle;
+          text-decoration: none;
+          animation-duration: 4s !important;
+        }
     </style>
   </head>
   <body style="background-image: url('assets/images/fat/fat (7).gif'); background-position: center;">
@@ -215,7 +280,7 @@
           <div class="col-md-12 nopadding">
             <br/>
             <div class="col-md-12 newfatakdat" style=" background-color: rgb(255 255 255 / 0.92); padding: 5px;border-top-left-radius: 7px;border-top-right-radius: 7px;">
-              <h1 id="family_name" class="text-center" style="color: #ffffff;"><b><p><span class="dfsname"></span></p> તરફથી તમને દિવાળીના પાવન પર્વ ની હાર્દિક શુભકામનાઓ</b></h1>
+              <h1 id="family_name" class="text-center" style="color: #ffffff;"><b><p><span class="dfsname"></span></p> <span id="firstmessage"></span></b></h1>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 fatakdat afc nopadding">
               <span id="demo" style="color: #ffffff"></span>
@@ -223,14 +288,21 @@
               <div class="col-lg-6 col-md-6 col-sm-6 fatakdat afc2 nopadding"></div>
             </div>
             <div class="col-md-12 newfatakdat" style=" background-color: rgb(255 255 255 / 0.92); padding: 5px;border-bottom-left-radius: 7px;border-bottom-right-radius: 7px;">
-              <span class="bottommarqwsh"><marquee><b><span class="dfsname"></span> તરફથી તમને દિવાળીના પાવન પર્વ ની હાર્દિક શુભકામનાઓ</b></marquee></span>
+              <span class="bottommarqwsh"><marquee><b><span class="dfsname"></span> <span id="secondmessage"></span></b></marquee></span>
             </div>
           </div>
         </div>
       </div>
-      <a class="footerbtn" href="" style="animation: swing 4s infinite;"><img width="25px" height="25px" src="assets/images/wapp.png"><b style="font-size: 19px;">👉 બધા ને મોકલો 👈</b> <img width="25px" height="25px" src="assets/images/wapp.png"></a>
+      <form id="frm" method="GET" action="file:///C:/xampp/htdocs/ongoing-project/akashpatel.github.io/wish/index.html">
+        <div class="enter-name">
+          <input class="animated pulse infinite" type="name" required="" maxlength="50" name="n" placeholder="👉અહીંયા તમારું નામ લખો....">
+          <button class="btn animated shake infinite" type="submit">👉જુવો </button>
+          <input type="hidden" name="s" id="s" value="t">
+        </div>
+      </form>
+      <a class="footerbtn hide" href="" style="animation: swing 4s infinite;"><img width="25px" height="25px" src="assets/images/wapp.png"><b style="font-size: 19px;">👉 બધા ને મોકલો 👈</b> <img width="25px" height="25px" src="assets/images/wapp.png"></a>
     </div>
-    <marquee class="bottomm" behavior="scroll" direction="right" scrolldelay="0" scrollamount=15>
+    <!-- <marquee class="bottomm" behavior="scroll" direction="right" scrolldelay="0" scrollamount=15>
       <img src="assets/images/gods/god1.png" height="40px" width="30px">
       <img src="assets/images/gods/god2.png" height="40px" width="30px">
       <img src="assets/images/gods/god3.png" height="40px" width="30px">
@@ -267,22 +339,40 @@
       <img src="assets/images/gods/god1.png" height="40px" width="30px">
       <img src="assets/images/gods/god2.png" height="40px" width="30px">
       <img src="assets/images/gods/god3.png" height="40px" width="30px">
-    </marquee>
-
+    </marquee> -->
+    <!-- <audio id="audio" src="https://drive.google.com/uc?export=view&amp;id=11JoroT7HjZQ1PbVVYa_Xdn6eWSh19lQZ"></audio> -->
     <script src="assets/js/jquery-1.10.2.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
+      var d = new Date();
+      var dt = d.toLocaleDateString();
+      // console.log(dt);
+      if(dt == '11/14/2020' || dt == '14/11/2020' || dt == '14-11-2020' || dt == '11-14-2020'){
+        $('#firstmessage').html('તરફથી તમને દિવાળીના પાવન પર્વ ની હાર્દિક શુભકામનાઓ');
+        $('#secondmessage').html('તરફથી તમને દિવાળીના પાવન પર્વ ની હાર્દિક શુભકામનાઓ');
+      }
+      if(dt == '11/15/2020' || dt == '15/11/2020' || dt == '15-11-2020' || dt == '11-15-2020'){
+        $('#firstmessage').html('તરફથી તમને નવા વર્ષના પાવન દિવસ ની હાર્દિક શુભકામનાઓ');
+        $('#secondmessage').html('તરફથી તમને નવા વર્ષના પાવન દિવસ ની હાર્દિક શુભકામનાઓ');
+      }
+
       setTimeout(function() {
         $('.fatakdat').css('background-color', 'rgb(255 255 255 / 0.68)');
         $('.fatakdat.afc2').css('background-size', 'cover');
       }, 1100);
       setTimeout(function() {
-        $('.fatakdat').css('background-image', 'url("assets/images/wis/wish (1).jpeg")');
+        if(dt == '11/14/2020' || dt == '14/11/2020' || dt == '14-11-2020' || dt == '11-14-2020'){
+          $('.fatakdat').css('background-image', 'url("assets/images/wis/wish (1).jpeg")');
+        }
+        if(dt == '11/15/2020' || dt == '15/11/2020' || dt == '15-11-2020' || dt == '11-15-2020'){
+          $('.fatakdat').css('background-image', 'url("https://pbs.twimg.com/media/EmY9U9kW8AAMrGq.jpg")');
+        }
         $('.fatakdat.afc2').css('background-image', 'url("assets/images/fat/fat (7).gif")');
         $('.fatakdat').css('background-size', 'cover');
       }, 2100);
+
       // second bg
         var myVar = setInterval(myTimer, 1000);
         function myTimer() {
@@ -310,15 +400,24 @@
         let url = window.location;
         let params = new URLSearchParams(url.search);
         let name = params.get('n'); // 'chrome-instant'
-        
 
         if(name == undefined || name == '' || name == ' '){
           $('.dfsname').html("મારા");
           $('.footerbtn').attr('href', 'whatsapp://send?text=મેં તમારા માટે કંઈક મોકલ્યું છે વાદળી લીટીને ટચ કરો https://patelakash317.github.io/wish/?n= જુઓ');
         } else {
           let xname = encodeURIComponent(name);
+          name = name.replaceAll(' ', '_');
+          xname = name.replaceAll('+', '_');
+          xname = name.replaceAll('%20', '_');
           $('.footerbtn').attr('href', 'whatsapp://send?text='+name+' તમારા માટે  માટે કંઈક મોકલ્યું છે વાદળી લીટીને ટચ કરો https://patelakash317.github.io/wish/?n='+xname+' જુઓ');
-          $('.dfsname').html(name);
+          let dname = name.replaceAll('_', ' ');
+          $('.dfsname').html(dname);
+
+          let s = params.get('s'); // 'chrome-instant'
+          if(s == 't'){
+            $('.footerbtn').removeClass('hide');
+            $('#frm').addClass('hide');
+          }
         }
       }
       getText();
