diwali wish updated

--- a/wish/index.html
+++ b/wish/index.html
@@ -293,7 +293,7 @@
           </div>
         </div>
       </div>
-      <form id="frm" method="GET" action="file:///C:/xampp/htdocs/ongoing-project/akashpatel.github.io/wish/index.html">
+      <form id="frm" method="GET" action="https://patelakash317.github.io/wish/">
         <div class="enter-name">
           <input class="animated pulse infinite" type="name" required="" maxlength="50" name="n" placeholder="👉અહીંયા તમારું નામ લખો....">
           <button class="btn animated shake infinite" type="submit">👉જુવો </button>
