updated style file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Akash Patel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/skystyle.css">
 
     <meta property="og:title" content="Akash Patel" />
     <meta property="og:url" content="https://patelakash317.github.io/" />
